EW models: placeholders, further text
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@44 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -133,6 +133,29 @@
       SLACcitation   = "%%CITATION = ARXIV:1208.4361;%%",
 }
 
+@article{Bell:2015sza,
+      author         = "Bell, Nicole F. and Cai, Yi and Dent, James B. and Leane,
+                        Rebecca K. and Weiler, Thomas J.",
+      title          = "{Dark matter at the LHC: EFTs and gauge invariance}",
+      year           = "2015",
+      eprint         = "1503.07874",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1503.07874;%%",
+}
+
+@article{Crivellin:2015wva,
+      author         = "Crivellin, Andreas and Haisch, Ulrich and Hibbs, Anthony",
+      title          = "{LHC constraints on gauge boson couplings to dark
+                        matter}",
+      year           = "2015",
+      eprint         = "1501.00907",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2014-252",
+      SLACcitation   = "%%CITATION = ARXIV:1501.00907;%%",
+}
+
 %%%%%%%%%%%%%%%%EW models, experimental searches
 
 %%%ATLAS
