decrease nesting level of EFT validity sections
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@46 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -55,7 +55,7 @@ Effective Field Theories (EFTs) are an extremely useful tool for DM searches at 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection*{Outline of the procedure described in Refs.~\cite{Busoni:2014sya,Aad:2015zva}}
+\section*{Outline of the procedure described in Refs.~\cite{Busoni:2014sya,Aad:2015zva}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 For a tree-level interaction between DM and the Standard Model (SM) via some mediator with mass $M$, the EFT approximation corresponds to expanding the propagator 
@@ -81,7 +81,7 @@ which can be solved for $M_*^{\rm rescaled}$ via either iteration or a scan (not
 \clearpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection*{Outline of the procedure described in Ref.~\cite{Racco:2015dxa}}
+\section*{Outline of the procedure described in Ref.~\cite{Racco:2015dxa}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 In \cite{Racco:2015dxa} a procedure to extract model independent and consistent bounds within the EFT is described. This procedure can be applied to any effective Lagrangian describing the interactions between the DM and the SM, and provides limits that can be directly reinterpreted in any completion of the EFT.
