add "subsubsection" command for nesting enthusiasts
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@47 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -57,7 +57,7 @@
 \begin{document}
 
 \morefloats
-\setcounter{secnumdepth}{2} % turn on section numbering, for now
+\setcounter{secnumdepth}{3} % turn on section numbering, for now (3=subsubsection)
 
 \input{frontmatter.tex}
 
