plots for monojet s-channel models
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@51 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -61,7 +61,122 @@ The input configuration in POWHEG allows you to set parameters to not generate e
 The POWHEG and Madgraph implementations were compared and the yields obtained from both were found to be compatible.  
 \end{itemize}
 
+\begin{figure}
+\centering
+\includegraphics[width=0.9\linewidth]{figures/monojet/scan_g_V_10_1000.eps}
+\caption{Scan over couplings}
+\label{fig:monojet_scan_V_g}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.9\linewidth]{figures/monojet/scan_g_V_10_5000.eps}
+\caption{Scan over couplings}
+\label{fig:monojet_narrow}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.9\linewidth]{figures/monojet/scan_mDM_V_1000.eps}
+\caption{Scan over Dark Matter mass}
+\label{fig:monojet_scan_V_mDM1000}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.9\linewidth]{figures/monojet/scan_mDM_V_100.eps}
+\caption{Scan over Dark Matter mass}
+\label{fig:monojet_scan_V_mDM100}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.9\linewidth]{figures/monojet/scan_mMed_V_10.eps}
+\caption{Scan over mediator mass}
+\label{fig:monojet_scan_V_mMed}
+\end{figure}
+
+
+
+
 \paragraph{Scalar and pseudoscalar mediator, s-channel exchange}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.9\linewidth]{figures/monojet/scan_g_S_10_500.eps}
+\caption{Scan over couplings}
+\label{fig:monojet_scan_S_g}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.9\linewidth]{figures/monojet/scan_mDM_S_500.eps}
+\caption{Scan over Dark Matter mass}
+\label{fig:monojet_scan_S_mDM1000}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.9\linewidth]{figures/monojet/scan_mDM_S_100.eps}
+\caption{Scan over Dark Matter mass}
+\label{fig:monojet_scan_S_mDM100}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.9\linewidth]{figures/monojet/scan_mMed_S_10.eps}
+\caption{Scan over mediator mass}
+\label{fig:monojet_scan_S_mMed}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.9\linewidth]{figures/monojet/scan_mMed_S_1000.eps}
+\caption{Scan over mediator mass}
+\label{fig:monojet_scan_top}
+\end{figure}
+
+\paragraph{Cross section scaling}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.45\linewidth]{figures/monojet/constantwidth_V_gg100.eps}
+\includegraphics[width=0.45\linewidth]{figures/monojet/constantwidth_A_gg100.eps}\\
+\includegraphics[width=0.45\linewidth]{figures/monojet/constantwidth_S_gg100.eps}
+\includegraphics[width=0.45\linewidth]{figures/monojet/constantwidth_P_gg100.eps}
+\caption{Mediator width}
+\label{fig:monojet_width100}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.45\linewidth]{figures/monojet/constantwidth_V_gg1000.eps}
+\includegraphics[width=0.45\linewidth]{figures/monojet/constantwidth_A_gg1000.eps}\\
+\includegraphics[width=0.45\linewidth]{figures/monojet/constantwidth_S_gg1000.eps}
+\includegraphics[width=0.45\linewidth]{figures/monojet/constantwidth_P_gg1000.eps}
+\caption{Mediator width}
+\label{fig:monojet_width1000}
+\end{figure}
+
+\begin{figure}
+\centering
+%\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_V_100_100.eps}
+%\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_V_1000_100.eps}\\
+\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_S_100_100.eps}
+\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_S_1000_100.eps}\\
+\caption{Scaling off-shell}
+\label{fig:monojet_scaling_offshell}
+\end{figure}
+
+\begin{figure}
+\centering
+%\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_V_10_100.eps}
+%\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_V_10_1000.eps}\\
+\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_S_10_100.eps}
+\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_S_10_1000.eps}\\
+\caption{Scaling on-shell}
+\label{fig:monojet_scaling_onshell}
+\end{figure}
 
 \paragraph{Colored scalar mediator, t-channel exchange}
 
