plots for monojet s-channel models
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@52 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -4,6 +4,7 @@
 \usepackage[svgnames]{xcolor}
 \usepackage{hyperref}
 \usepackage{lineno}
+\usepackage{epstopdf}
 
 \usepackage{slashed}
 \usepackage{amsfonts}
