--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -96,6 +96,13 @@ The POWHEG and Madgraph implementations were compared and the yields obtained fr
 \label{fig:monojet_scan_V_mMed}
 \end{figure}
 
+\begin{figure}
+\centering
+\includegraphics[width=0.45\linewidth]{figures/monojet/grid_V.eps}
+\includegraphics[width=0.45\linewidth]{figures/monojet/grid_A.eps}
+\caption{Parameter grid}
+\label{fig:monojet_grid_V}
+\end{figure}
 
 
 
@@ -135,6 +142,15 @@ The POWHEG and Madgraph implementations were compared and the yields obtained fr
 \caption{Scan over mediator mass}
 \label{fig:monojet_scan_top}
 \end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.45\linewidth]{figures/monojet/grid_S.eps}
+\includegraphics[width=0.45\linewidth]{figures/monojet/grid_P.eps}
+\caption{Parameter grid}
+\label{fig:monojet_grid_S}
+\end{figure}
+
 
 \paragraph{Cross section scaling}
 
