updated plots for monojet s-channel models
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@53 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -176,23 +176,24 @@ The POWHEG and Madgraph implementations were compared and the yields obtained fr
 
 \begin{figure}
 \centering
-%\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_V_100_100.eps}
-%\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_V_1000_100.eps}\\
-\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_S_100_100.eps}
-\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_S_1000_100.eps}\\
-\caption{Scaling off-shell}
-\label{fig:monojet_scaling_offshell}
-\end{figure}
-
-\begin{figure}
-\centering
-%\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_V_10_100.eps}
-%\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_V_10_1000.eps}\\
+\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_V_10_100.eps}
+\includegraphics[width=0.45\linewidth]{figures/monojet/scaling_V_10_1000.eps}\\
 \includegraphics[width=0.45\linewidth]{figures/monojet/scaling_S_10_100.eps}
 \includegraphics[width=0.45\linewidth]{figures/monojet/scaling_S_10_1000.eps}\\
 \caption{Scaling on-shell}
-\label{fig:monojet_scaling_onshell}
+\label{fig:monojet_scaling}
 \end{figure}
+
+%M_S = 300 GeV, m_chi = 100 GeV, gSM = gDM =4
+\begin{figure}
+\centering
+\includegraphics[page=1, trim=310 200 310 200, clip, width=0.3\linewidth]{figures/monojet/rescalingexercise.pdf}
+\includegraphics[page=2, trim=305 195 305 195, clip, width=0.3\linewidth]{figures/monojet/rescalingexercise.pdf}
+\includegraphics[page=3, trim=300 190 300 190, clip, width=0.3\linewidth]{figures/monojet/rescalingexercise.pdf}
+\caption{Scaling along the lines of constnat width}
+\label{fig:monojet_scaling_constwidth}
+\end{figure}
+
 
 \paragraph{Colored scalar mediator, t-channel exchange}
 
